--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#22c55e" />
-    <title>Weekendly — Weekend Planner</title>
+    <title>EndJoy — Weekend Planner</title>
   </head>
   <body class="bg-background text-foreground">
     <div id="root"></div>
